Add PatchMatchedEndpoint.cs
